--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+mcp-weather-stdio-server.log
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
