--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,6 @@ spring:
     banner-mode: off
     web-application-type: none
   datasource:
-    url: jdbc:mysql://localhost:3306/todolist?useSSL=false&serverTimezone=UTC
-    username: myuser
-    password: secret
     driver-class-name: com.mysql.cj.jdbc.Driver
     hikari:
       maximum-pool-size: 10
@@ -16,19 +13,11 @@ spring:
       idle-timeout: 300000
       connection-timeout: 20000
       max-lifetime: 1200000
-  jpa:
-    hibernate:
-      ddl-auto: update
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        dialect: org.hibernate.dialect.MySQL8Dialect
   ai:
     mcp:
       server:
         enabled: true
-        name: my-weather-server
+        name: mcp-mysql-server
         version: 0.0.1
         # SYNC or ASYNC
         type: SYNC
@@ -41,5 +30,5 @@ logging:
   pattern:
     console:
   file:
-    name: ./mcp-weather-stdio-server.log
+    name: ./mcp-mysql-stdio-server.log
   
